objects/mcdm_15__LinkedBusinessUnit__c.object
<CustomObject>
    <fields>
        <fullName>mcdm_15__AccountName__c</fullName>
        <description>Stores the name of the Linked Business Unit Account</description>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__AuthProviderName__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Name of the Auth Provider associated with this Linked Business Unit</description>
        <label>Auth Provider Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>mcdm_15__AuthSettingsId__c</fullName>
        <description>The ID of the Auth Settings entry for the corresponding Auth Provider</description>
        <label>Auth Settings ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>mcdm_15__BusinessUnitName__c</fullName>
        <description>Stores the name of the Linked Business Unit</description>
        <label>Business Unit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Connection_Status__c</fullName>
        <formula>IF(mcdm_15__IsAuthorized__c,HYPERLINK(&quot;/lightning/setup/NamedCredential/page?address=%2F&quot; &amp; mcdm_15__NamedCredentialId__c, $Label.mcdm_15__connectedformulamessage), HYPERLINK(&quot;/lightning/setup/NamedCredential/page?address=%2F&quot; &amp; mcdm_15__NamedCredentialId__c, $Label.mcdm_15__completeloginmessage))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Connection Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__DisplayName__c</fullName>
        <description>The User entered Display Name associated with the Linked Business Unit</description>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>mcdm_15__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether this Business Unit is enabled or disabled</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mcdm_15__IsAuthorized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for whether the Linked Business Unit&apos;s Named Credential is authorized</description>
        <label>Authorized?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Mid__c</fullName>
        <description>Stores the mid value for this Linked Business Unit</description>
        <label>MID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__NamedCredentialApiName__c</fullName>
        <label>Named Credential API Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>mcdm_15__NamedCredentialId__c</fullName>
        <label>Named Credential ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>mcdm_15__StubAuthSettingsId__c</fullName>
        <description>The ID of the stub Auth Settings entry for the corresponding Auth Provider</description>
        <label>Stub Auth Settings ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>mcdm_15__SuffixNumber__c</fullName>
        <description>The Suffix Used for the Linked Business Unit Authentication Objects</description>
        <label>Suffix Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>mcdm_15__TSEMigrationLegacyId__c</fullName>
        <description>The ID of the legacy auth&apos;d Linked Business Unit associated with this Linked Business Unit</description>
        <label>TSE Migration Legacy Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>mcdm_15__TSEMigrationStatus__c</fullName>
        <description>The tse migration status associated with this Linked Business Unit</description>
        <label>-</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Username__c</fullName>
        <description>The Username Authenticated with the Named Credential that is associated with this Linked Business Unit</description>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Marketing Cloud Business Unit</label>
    <listViews>
        <fullName>mcdm_15__All_Business_Units</fullName>
        <columns>mcdm_15__DisplayName__c</columns>
        <columns>mcdm_15__BusinessUnitName__c</columns>
        <columns>mcdm_15__Connection_Status__c</columns>
        <columns>mcdm_15__Mid__c</columns>
        <columns>mcdm_15__Username__c</columns>
        <filterScope>Everything</filterScope>
        <label>Connected Business Units</label>
    </listViews>
    <listViews>
        <fullName>mcdm_15__All_Business_Units_Filtered_TSE_Migration</fullName>
        <columns>mcdm_15__DisplayName__c</columns>
        <columns>mcdm_15__BusinessUnitName__c</columns>
        <columns>mcdm_15__Connection_Status__c</columns>
        <columns>mcdm_15__Mid__c</columns>
        <columns>mcdm_15__Username__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>mcdm_15__TSEMigrationStatus__c</field>
            <operation>notEqual</operation>
            <value>Updating</value>
        </filters>
        <label>Connected Business Units</label>
    </listViews>
    <nameField>
        <displayFormat>LBU-{0}</displayFormat>
        <label>Linked Business Unit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Cloud Business Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>